[MD] Use same focus ring on BarControlButton as MdTextButton.

BUG=596033

Review URL: https://codereview.chromium.org/1817253003

Cr-Commit-Position: refs/heads/master@{#382759}

Former-commit-id: ee3ec60a1260a0c72edaae3a4b72c90bae93a2d9