ui/views/controls/button/custom_button.h
@@ -105,6 +105,13 @@ class VIEWS_EXPORT CustomButton : public Button, public gfx::AnimationDelegate {
 
   InkDropDelegate* ink_drop_delegate() const { return ink_drop_delegate_; }
 
+  // Overridden from View:
+  void Layout() override;
+  void ViewHierarchyChanged(
+      const ViewHierarchyChangedDetails& details) override;
+  void OnFocus() override;
+  void OnBlur() override;
+
  protected:
   // Construct the Button with a Listener. See comment for Button's ctor.
   explicit CustomButton(ButtonListener* listener);
@@ -141,10 +148,8 @@ class VIEWS_EXPORT CustomButton : public Button, public gfx::AnimationDelegate {
     ink_drop_delegate_ = ink_drop_delegate;
   }
 
-  // Overridden from View:
-  void ViewHierarchyChanged(
-      const ViewHierarchyChangedDetails& details) override;
-  void OnBlur() override;
+  // When called, creates and uses |md_focus_ring_| instead of a focus painter.
+  void UseMdFocusRing();
 
   // Overridden from Button:
   void NotifyClick(const ui::Event& event) override;
@@ -190,6 +195,11 @@ class VIEWS_EXPORT CustomButton : public Button, public gfx::AnimationDelegate {
 
   // The color of the ripple and hover.
   SkColor ink_drop_base_color_;
+
+  // The MD-style focus ring. This is not done via a FocusPainter
+  // because it needs to paint to a layer so it can extend beyond the bounds of
+  // |this|.
+  views::View* md_focus_ring_;
 
   DISALLOW_COPY_AND_ASSIGN(CustomButton);
 };
